[package]
name = "mpecdsa"
version = "0.1.0"
authors = ["abhi <abhi@neu.edu>", "Jack Doerner <j@ckdoerner.net>"]
build = "build.rs"

[dependencies]
getopts = "0.2"
rand = "0.3.16"
curves = { path = "./curves" }
rust-crypto = "^0.2"
time="*"
byteorder = "1.1.0"
bit_reverse = "0.1.7"
openmp-sys = "0.1.1"
rayon = "1.0"